Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    UINT16 msgflag;             //Driver writes message flags
    UINT16 msgopt;              //Driver writes message options
    UINT16 msgerr;              //Card writes message errors
    UINT16 msgact;              //Card writes message activity
    UINT16 resptime;            //Card writes response time
    UINT16 resv5;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    union {
        UINT32 timetag;         //Card writes time tag
        UINT32 hitcount;        //Card writes hit count
    };
    union {
        UINT32 elapsetime;      //Card writes elapsed time
        UINT32 mintime;         //Card writes min time
        UINT32 maxtime;         //Card writes max time
    };
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //Card/User writes command word (R/T)
	UINT16 cwdinfo;				//Card/User writes command word info
    UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;		    	//Card writes status word info
    UINT16 data[32];            //User/Card writes data words (R/T)
    UINT16 extra[8];            //User/Card writes extra words (R/T)
} MSGFIELDSEBR;
typedef MSGFIELDSEBR * LPMSGFIELDSEBR;
BTIEBRAPI BOOL __stdcall BTIEBR_CmdStepRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdStepWr(BOOL value,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorCtrl(UINT32 ctrlval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorDefine(UINT32 defineval,UINT16 errvalue,INT32 countval,UINT16 wordpos,UINT16 bitpos,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ErrorSent(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTagRT(BOOL tagval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTriggerDefine(BOOL enableflag,UINT16 trigmask,UINT16 trigval,UINT16 pinpolarity,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockRd(LPUINT16 buf,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockWr(LPUINT16 buf,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataRd(LPUINT16 buf,INT32 count,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataWr(LPUINT16 buf,INT32 count,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ListMultiBlockRd(LPUINT16 buf,LPINT32 blkcountptr,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ListMultiBlockWr(LPUINT16 buf,INT32 blkcount,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonConfig(UINT32 configval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonFilterRTLink(UINT32 rtlinkmask,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonFilterSA(INT32 rtlink,UINT32 rcvsamask,UINT32 xmtsamask,UINT32 rcvmcmask,UINT32 xmtmcmask,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgBlockRd(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgBlockWr(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgDataRd(LPUINT16 buf,INT32 count,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgDataWr(LPUINT16 buf,INT32 count,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_MsgFieldRd(UINT16 fieldtype,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_MsgFieldWr(UINT32 fieldval,UINT16 fieldtype,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgGroupRd(INT32 nummsgs,LPMSGFIELDSEBR msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgGroupWr(INT32 nummsgs,LPMSGFIELDSEBR msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_MsgSkipRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgSkipWr(BOOL skip,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MsgSyncDefine(BOOL enableflag,UINT16 syncmask,UINT16 pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MsgTriggerDefine(BOOL enableflag,UINT16 trigmask,UINT16 trigval,UINT16 pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_PlayConfig(UINT32 configval,UINT32 rtlinkmask,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_PlayStatus(INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_PlayWr(LPUINT16 buf,UINT16 bufcount,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTConfig(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_RTCreateList(UINT32 listconfigval,INT32 count,UINT32 msgconfigval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_RTCreateMsg(UINT32 configval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_RTGetMsg(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTReset(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTResponseTimeSet(INT32 resptime,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSetMode(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_RTSWDRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSWDWr(UINT16 swdval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSyncDefine(BOOL enableflag,UINT16 syncmask,UINT16 pinpolarity,INT32 rtlink,UINT32 rcvsamask,UINT32 xmtsamask,UINT32 rcvmcmask,UINT32 xmtmcmask,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackCWD(INT32 TAval,INT32 TRflag,INT32 SAval,INT32 WCval);