Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS

            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdStepRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdStepRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdStepWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdStepWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorCtrl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorCtrl(UInt32 ctrlval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorDefine(UInt32 defineval, UInt16 errvalue, Int32 countval, UInt16 wordpos, UInt16 bitpos, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorSent", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorSent(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorTagBC", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTagBC(Int32 tagval, UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorTagRT", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTagRT(Int32 tagval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ErrorTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ErrorTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_ListBlockRd(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_ListBlockWr(UInt16[] buf, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListDataRd(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListDataWr(UInt16[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListMultiBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListMultiBlockRd(UInt16[] buf, ref Int32 blkcountptr, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ListMultiBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListMultiBlockWr(UInt16[] buf, Int32 blkcount, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MonConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MonFilterRTLink", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonFilterRTLink(UInt32 rtlinkmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MonFilterSA", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonFilterSA(Int32 rtlink, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgBlockRd(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgBlockWr(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgDataRd(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgDataWr(UInt16[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgFieldRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgFieldWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgGroupRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgGroupRd(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDSEBR[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgGroupWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgGroupWr(Int32 nummsgs, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] MSGFIELDSEBR[] msgflds, UInt32[] msgaddrptr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgSkipRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgSkipRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgSkipWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgSkipWr(Int32 skip, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_MsgTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_PlayConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayConfig(UInt32 configval, UInt32 rtlinkmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_PlayStatus", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayStatus(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_PlayWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_PlayWr(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTConfig(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTCreateList", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTCreateMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTGetMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTGetMsg(Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTReset", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTReset(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTResponseTimeSet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTResponseTimeSet(Int32 resptime, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTSetMode", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSetMode(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTSWDRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_RTSWDRd(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTSWDWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSWDWr(UInt16 swdval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_RTSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 rtlink, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ValPackCWD", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
